# BinaryMorfology

./: BinaryMorfology.kdev4  CMakeLists.txt  Doxyfile  Messages.sh  Picture.cpp  Picture.h  PixelArr.cpp  PixelArr.h  RGBPixel.cpp  RGBPixel.h  Singleton.cpp  Singleton.h  Textures.cpp  Textures.h  Window.cpp  Window.h  generator.py  main.cpp  makefile  test  test.txt  teststruc.txt
.kdev4/: BinaryMorfology.kdev4
html/: PixelArr_8cpp.html  PixelArr_8cpp__incl.map  PixelArr_8cpp__incl.md5  PixelArr_8h.html  PixelArr_8h__dep__incl.map  PixelArr_8h__dep__incl.md5  PixelArr_8h__incl.map  PixelArr_8h__incl.md5  PixelArr_8h_source.html  Textures_8cpp.html  Textures_8cpp__incl.map  Textures_8cpp__incl.md5  Textures_8h.html  Textures_8h__dep__incl.map  Textures_8h__dep__incl.md5  Textures_8h__incl.map  Textures_8h__incl.md5  Textures_8h_source.html  Window_8cpp.html  Window_8cpp__incl.map  Window_8cpp__incl.md5  Window_8h.html  Window_8h__dep__incl.map  Window_8h__dep__incl.md5  Window_8h_source.html  annotated.html  classPixelArr-members.html  classPixelArr.html  classTextures-members.html  classTextures.html  classWindow-members.html  classWindow.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  generator_8py.html  globals.html  globals_func.html  (+10 more)
latex/: PixelArr_8cpp.tex  PixelArr_8cpp__incl.md5  PixelArr_8h.tex  PixelArr_8h__dep__incl.md5  PixelArr_8h__incl.md5  Textures_8cpp.tex  Textures_8cpp__incl.md5  Textures_8h.tex  Window_8cpp.tex  (+20 more)
src/: CMakeLists.txt  binarymorfology.cpp  binarymorfology.h
src/package/: metadata.desktop
(+66 files in other folders)
